<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ACEit!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_voice">Voice Game</string>
    <string name="title_activity_results">Result</string>
    <string name="title_activity_voice_level">Level</string>
    <string name="title_activity_account">Accounts</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_level_two_draw">LevelTwoDrawActivity</string>
    <string name="title_activity_level_three">LevelThreeActivity</string>
    <string name="title_activity_back_to_levels">BackToLevelsActivity</string>
    <string name="title_activity_level_three_draw">LevelThreeDrawActivity</string>
    <string name="content_description">Description</string>

    <!-- Button Texts -->
    <string name="start">S T A R T</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="a">A</string>
    <string name="r">R</string>
    <string name="ext">!</string>
    <string name="levelOne">1</string>
    <string name="levelTwo">2</string>
    <string name="levelThree">3</string>
    <string name="levelFour">4</string>
    <string name="Aa">Aa</string>
    <string name="newAccount">New Account</string>
    <string name="guestAccount">Challenge</string>
    <string name="instruction">Press to start</string>
    <string name="instruction_draw">Press to start draw</string>
    <string name="replay_incorrect">Play incorrect</string>
    <string name="result_text">Aww.. Try again?</string>

    <string-array name="stroke_size">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
    <string-array name="stroke_color">
        <item>Black</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Blue</item>
    </string-array>

    <string name="title_activity_level_four">LevelFourActivity</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="title_activity_level_one">LevelOneActivity</string>
    <string name="title_activity_level_two">LevelTwoActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_game">GameActivity</string>

</resources>