<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/account1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/newAccount"
                android:onClick="play"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/White"
                android:background="@color/LimeGreen" />

            <ImageButton
                android:id="@+id/account1_delete"
                android:contentDescription="@string/content_description"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:onClick="delete"
                android:src="@drawable/ic_action_discard"
                android:background="@color/LimeGreen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/account2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/newAccount"
                android:onClick="play"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/White"
                android:background="@color/SkyBlue" />

            <ImageButton
                android:id="@+id/account2_delete"
                android:contentDescription="@string/content_description"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:onClick="delete"
                android:src="@drawable/ic_action_discard"
                android:background="@color/SkyBlue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <Button
                android:id="@+id/challenge"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/guestAccount"
                android:onClick="play"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/White"
                android:background="@color/MediumPurple" />

            <ImageButton
                android:id="@+id/challenge_delete"
                android:contentDescription="@string/content_description"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:onClick="delete"
                android:src="@drawable/ic_action_discard"
                android:background="@color/MediumPurple" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/help"
        android:contentDescription="@string/content_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="15dp"
        android:layout_gravity="start"
        android:src="@drawable/ic_question_mark"
        android:background="@color/LimeGreen"
        android:onClick="help" />

    <View
        android:id="@+id/whiteBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:visibility="gone" />

</FrameLayout>